Fixed and added a conneciton string

--- a/TestIISDeploy/appsettings.json
+++ b/TestIISDeploy/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  {
-    "ConnectionString":"Hello"
+  "ConnectionStrings" : {
+    "ConnectionString1":"Hello"
   }
 }
